@@ -1,3 +1,8 @@
+Sun Apr 24 12:34:09 2005  Peter Naulls  <peter@chocky.org>
+
+	* clib/dirent.h, clib/grp.h: Make types used visible by including
+	  sys/types.h instead.
+
 Sun Apr 24 11:08:07 2005  Nick Burrett  <nick@sqrt.co.uk>
 
 	* stdlib/atoll.c: New file.
